testing/Travis/testcases/TypeChecker/shouldPass/Identity.adl
CONTEXT IdentityTypeCheck IN ENGLISH

PURPOSE CONTEXT IdentityTypeCheck
{+ Test that identity relation is correctly typed.
   This verifies the type checker correctly accepts I[A] yielding [A*A]. +}

RELATION result[A*A]

RULE testIdentity: result = I

ENDCONTEXT
